--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- Thay đổi favicon thành logo mới -->
+    <link rel="icon" href="%PUBLIC_URL%/logo192.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- Thay đổi logo Apple touch icon -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +26,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- Thay đổi tiêu đề -->
+    <title>Thành Phước</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
